moves indices to CBlock and implementation for DateDistanceFilter and MultiSelectFilter as PoC (but also because they are the most relevant here)